@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04r: *********************************
 
+IMP/MAN: (6/14/06, SMR) Expressions allowed in Array dialog (Bug #1100).
+
 BUG: (6/14/06, SMR) Mimic stitcher responds to its own arcs (Bug #1048, #1134).
 FIX: Routing.endBatch() now ensures that the snapshot was not from the router.
 
